[gd_scene load_steps=5 format=3 uid="uid://rcj2mnv6rwrf"]

[ext_resource type="Script" path="res://components/user_interface/user_interface.gd" id="2"]
[ext_resource type="PackedScene" path="res://components/user_interface/components/vertical_margin.tscn" id="4"]
[ext_resource type="PackedScene" path="res://components/user_interface/components/horizontal_margin.tscn" id="5"]

[sub_resource type="AtlasTexture" id="1"]

[node name="UserInterface" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
script = ExtResource("2")

[node name="LetterControl" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Items" type="VBoxContainer" parent="LetterControl"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="LetterControl/Items"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="LetterControl/Items/Panel"]
layout_mode = 2

[node name="Texture" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls"]
layout_mode = 2
alignment = 1

[node name="Panel" type="PanelContainer" parent="LetterControl/Items/Panel/Controls/Texture"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Char" type="TextureRect" parent="LetterControl/Items/Panel/Controls/Texture/Panel"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("1")

[node name="Advance" type="ColorRect" parent="LetterControl/Items/Panel/Controls/Texture/Panel"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
size_flags_horizontal = 0

[node name="AdvanceControls" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls"]
layout_mode = 2

[node name="Centering" type="CenterContainer" parent="LetterControl/Items/Panel/Controls/AdvanceControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Items" type="VBoxContainer" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering"]
layout_mode = 2

[node name="HorizontalMargin" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items" instance=ExtResource("5")]
layout_mode = 2

[node name="TextAdvance" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items"]
layout_mode = 2

[node name="XAdvance" type="Label" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/TextAdvance"]
layout_mode = 2
size_flags_horizontal = 3
text = "X Advance"
horizontal_alignment = 1

[node name="Edit" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentAdvance" type="LineEdit" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Pixels2" type="Label" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "px"
horizontal_alignment = 1

[node name="Slash" type="Label" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "/"
horizontal_alignment = 1

[node name="AdvanceLimit" type="Label" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "10"
horizontal_alignment = 1

[node name="Pixels" type="Label" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/Edit"]
layout_mode = 2
size_flags_horizontal = 3
text = "px"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items"]
layout_mode = 2

[node name="Decrease" type="Button" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="Increase" type="Button" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[node name="HorizontalMargin2" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items" instance=ExtResource("5")]
layout_mode = 2

[node name="TextChars" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items"]
layout_mode = 2

[node name="Index" type="Label" parent="LetterControl/Items/Panel/Controls/AdvanceControls/Centering/Items/TextChars"]
layout_mode = 2
size_flags_horizontal = 3
text = "CURRENT_CHAR_INDEX"
horizontal_alignment = 1

[node name="LetterSwitch" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls"]
layout_mode = 2
alignment = 1

[node name="Centering" type="CenterContainer" parent="LetterControl/Items/Panel/Controls/LetterSwitch"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Controls" type="HBoxContainer" parent="LetterControl/Items/Panel/Controls/LetterSwitch/Centering"]
layout_mode = 2

[node name="PrevChar" type="Button" parent="LetterControl/Items/Panel/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
text = "<"

[node name="CurrentChar" type="LineEdit" parent="LetterControl/Items/Panel/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Slash" type="Label" parent="LetterControl/Items/Panel/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "/"

[node name="CharCount" type="Label" parent="LetterControl/Items/Panel/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "10"

[node name="NextChar" type="Button" parent="LetterControl/Items/Panel/Controls/LetterSwitch/Centering/Controls"]
layout_mode = 2
text = ">"

[node name="SpaceFill" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureInfoControl" type="MarginContainer" parent="."]
layout_mode = 2

[node name="OpenFile" type="FileDialog" parent="TextureInfoControl"]
access = 2

[node name="Panel" type="PanelContainer" parent="TextureInfoControl"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="TextureInfoControl/Panel"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="TextureInfoControl/Panel/Margin"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Items" type="VBoxContainer" parent="TextureInfoControl/Panel/Margin/Scroll"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProjectTitle" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "PROJECT_NAME"

[node name="VMarginTitle" parent="TextureInfoControl/Panel/Margin/Scroll/Items" instance=ExtResource("4")]
layout_mode = 2

[node name="ImageLoad" type="Button" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "LOAD_AN_IMAGE"

[node name="VMarginLoad" parent="TextureInfoControl/Panel/Margin/Scroll/Items" instance=ExtResource("4")]
layout_mode = 2

[node name="FontNameLabel" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "FONT_NAME"

[node name="FontNameEdit" type="LineEdit" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2

[node name="VMarginFont" parent="TextureInfoControl/Panel/Margin/Scroll/Items" instance=ExtResource("4")]
layout_mode = 2

[node name="TextureNameLabel" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "TEXTURE_NAME"

[node name="TextureNameEdit" type="LineEdit" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2

[node name="VMarginTexture" parent="TextureInfoControl/Panel/Margin/Scroll/Items" instance=ExtResource("4")]
layout_mode = 2

[node name="CharacterDimensionsLabel" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "CHAR_DIMENSIONS"

[node name="CharacterDimensions" type="HBoxContainer" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2

[node name="CharacterWidthEdit" type="LineEdit" parent="TextureInfoControl/Panel/Margin/Scroll/Items/CharacterDimensions"]
layout_mode = 2
text = "1"

[node name="Pixels" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items/CharacterDimensions"]
layout_mode = 2
text = "px"

[node name="HMarginX" parent="TextureInfoControl/Panel/Margin/Scroll/Items/CharacterDimensions" instance=ExtResource("5")]
layout_mode = 2

[node name="Times" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items/CharacterDimensions"]
layout_mode = 2
text = "X"

[node name="HMarginY" parent="TextureInfoControl/Panel/Margin/Scroll/Items/CharacterDimensions" instance=ExtResource("5")]
layout_mode = 2

[node name="CharacterHeightEdit" type="LineEdit" parent="TextureInfoControl/Panel/Margin/Scroll/Items/CharacterDimensions"]
layout_mode = 2
text = "1"

[node name="Pixels2" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items/CharacterDimensions"]
layout_mode = 2
text = "px"

[node name="VMarginChar" parent="TextureInfoControl/Panel/Margin/Scroll/Items" instance=ExtResource("4")]
layout_mode = 2

[node name="BaseFromTopLabel" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "BASE_FROM_TOP"

[node name="BaseSettings" type="HBoxContainer" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2

[node name="DecreaseButton" type="Button" parent="TextureInfoControl/Panel/Margin/Scroll/Items/BaseSettings"]
layout_mode = 2
text = "<"

[node name="BaseValue" type="LineEdit" parent="TextureInfoControl/Panel/Margin/Scroll/Items/BaseSettings"]
layout_mode = 2
text = "0"

[node name="Pixels3" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items/BaseSettings"]
layout_mode = 2
text = "px"

[node name="IncreaseButton" type="Button" parent="TextureInfoControl/Panel/Margin/Scroll/Items/BaseSettings"]
layout_mode = 2
text = ">"

[node name="BaseFromTopMargin" parent="TextureInfoControl/Panel/Margin/Scroll/Items" instance=ExtResource("5")]
layout_mode = 2

[node name="CharacterListLabel" type="Label" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "CHAR_LIST"

[node name="CharacterListEdit" type="TextEdit" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
size_flags_vertical = 3
selecting_enabled = false

[node name="VMarginCharList" parent="TextureInfoControl/Panel/Margin/Scroll/Items" instance=ExtResource("4")]
layout_mode = 2

[node name="ExportButton" type="Button" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "EXPORT_FNT"

[node name="ExportAsXMLButton" type="Button" parent="TextureInfoControl/Panel/Margin/Scroll/Items"]
layout_mode = 2
text = "EXPORT_FNT_AS_XML"

[node name="InfoDialog" type="AcceptDialog" parent="."]
dialog_text = "Dialog message."

[node name="FntOverwriteConfirmation" type="ConfirmationDialog" parent="."]
dialog_text = "FILE_EXISTS"
